{
  "version": 4,
  "terraform_version": "1.9.5",
  "serial": 918,
  "lineage": "5d2dc8c7-d0a0-a191-d762-6e9179518dd0",
  "resources": [
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2-pub-wattson",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e86e20dae9224db8",
            "arn": "arn:aws:ec2:us-east-1:005348368148:instance/i-020d57d18e6ca73a0",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-062e3af537fad5978",
                "volume_size": 15,
                "volume_type": "gp3"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-020d57d18e6ca73a0",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "public_key_wattson",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-05f4e713cc2be4308",
            "private_dns": "ip-10-0-0-50.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": true,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.50",
            "public_dns": "ec2-13-217-111-162.compute-1.amazonaws.com",
            "public_ip": "13.217.111.162",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-062e3af537fad5978",
                "volume_size": 15,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f3112c028da7e93f",
            "tags": {
              "Name": "ec2-wattson"
            },
            "tags_all": {
              "Name": "ec2-wattson"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-09351e2994f5d13fd"
            ]
          },
          "dependencies": [
            "module.keys.aws_key_pair.kp",
            "module.keys.tls_private_key.pk",
            "module.security_group.aws_security_group.sgp_pub_wattson",
            "module.vpc.aws_subnet.sub-pub-wattson",
            "module.vpc.aws_vpc.vpc-wattson"
          ]
        }
      ]
    },
    {
      "module": "module.router_table",
      "mode": "managed",
      "type": "aws_route",
      "name": "internet-acess",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0243bd23f1cf3850b",
            "id": "r-rtb-0fe05488a3f9171fb1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0fe05488a3f9171fb",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.router_table.aws_route_table.rtb-wattson",
            "module.vpc.aws_internet_gateway.igw-wattson",
            "module.vpc.aws_vpc.vpc-wattson"
          ]
        }
      ]
    },
    {
      "module": "module.router_table",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rtb-wattson",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:005348368148:route-table/rtb-0fe05488a3f9171fb",
            "id": "rtb-0fe05488a3f9171fb",
            "owner_id": "005348368148",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0243bd23f1cf3850b",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rtb-wattson"
            },
            "tags_all": {
              "Name": "rtb-wattson"
            },
            "timeouts": null,
            "vpc_id": "vpc-03c51ddc133ee61e2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc-wattson"
          ]
        }
      ]
    },
    {
      "module": "module.router_table",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_subnet_pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05acdad83c8eb059b",
            "route_table_id": "rtb-0fe05488a3f9171fb",
            "subnet_id": "subnet-0f3112c028da7e93f"
          },
          "dependencies": [
            "module.router_table.aws_route_table.rtb-wattson",
            "module.vpc.aws_subnet.sub-pub-wattson",
            "module.vpc.aws_vpc.vpc-wattson"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sgp_pub_wattson",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:005348368148:security-group/sg-09351e2994f5d13fd",
            "description": "Allow SSH acess",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09351e2994f5d13fd",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "sgp_pub_wattson",
            "name_prefix": "",
            "owner_id": "005348368148",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sgp_pub_wattson"
            },
            "tags_all": {
              "Name": "sgp_pub_wattson"
            },
            "timeouts": null,
            "vpc_id": "vpc-03c51ddc133ee61e2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc-wattson"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw-wattson",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:005348368148:internet-gateway/igw-0243bd23f1cf3850b",
            "id": "igw-0243bd23f1cf3850b",
            "owner_id": "005348368148",
            "tags": {
              "Name": "wattson-igw"
            },
            "tags_all": {
              "Name": "wattson-igw"
            },
            "vpc_id": "vpc-03c51ddc133ee61e2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc-wattson"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sub-pub-wattson",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:005348368148:subnet/subnet-0f3112c028da7e93f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.0/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": true,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f3112c028da7e93f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "005348368148",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sub-pub-wattson"
            },
            "tags_all": {
              "Name": "sub-pub-wattson"
            },
            "vpc_id": "vpc-03c51ddc133ee61e2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc-wattson"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc-wattson",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:005348368148:vpc/vpc-03c51ddc133ee61e2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/24",
            "default_network_acl_id": "acl-0971af9ce9fa8eb95",
            "default_route_table_id": "rtb-0bef71da29aac2c8c",
            "default_security_group_id": "sg-03a7f8512fa4fe959",
            "dhcp_options_id": "dopt-0d661435d9864e960",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-03c51ddc133ee61e2",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0bef71da29aac2c8c",
            "owner_id": "005348368148",
            "tags": {
              "Name": "vpc-wattson"
            },
            "tags_all": {
              "Name": "vpc-wattson"
            }
          }
        }
      ]
    }
  ]
}